--- a/UnarchiverSlider/Base.lproj/Main.storyboard
+++ b/UnarchiverSlider/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +15,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Xvb-DS-884">
+                                <rect key="frame" x="249" y="214" width="118" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="114" id="hU7-hN-lXJ"/>
+                                    <constraint firstAttribute="height" constant="30" id="klQ-Ay-NIx"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="sliderChangedAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="jKL-94-0Lv"/>
+                                </connections>
+                            </slider>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8tJ-qZ-SWz">
+                                <rect key="frame" x="260" y="291" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="Hgm-tR-lRR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KwQ-EA-yJm">
+                                <rect key="frame" x="219" y="355" width="32" height="30"/>
+                                <state key="normal" title="save">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="saveAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tIT-bv-dnL"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jMl-RJ-hPM">
+                                <rect key="frame" x="373" y="355" width="30" height="30"/>
+                                <state key="normal" title="load">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loadAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kdu-f8-sLs"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="KwQ-EA-yJm" secondAttribute="centerY" constant="-70" id="1Yd-bG-SJr"/>
+                            <constraint firstAttribute="centerX" secondItem="8tJ-qZ-SWz" secondAttribute="centerX" constant="-8.5" id="6lf-zm-fTb"/>
+                            <constraint firstAttribute="centerY" secondItem="jMl-RJ-hPM" secondAttribute="centerY" constant="-70" id="7Jb-Kn-M3I"/>
+                            <constraint firstAttribute="centerY" secondItem="8tJ-qZ-SWz" secondAttribute="centerY" constant="-6" id="DpQ-ZO-VpO"/>
+                            <constraint firstAttribute="centerY" secondItem="Xvb-DS-884" secondAttribute="centerY" constant="71" id="U7b-6K-2Cd"/>
+                            <constraint firstAttribute="centerX" secondItem="jMl-RJ-hPM" secondAttribute="centerX" constant="-88" id="ZSi-e0-Qrf"/>
+                            <constraint firstAttribute="centerX" secondItem="KwQ-EA-yJm" secondAttribute="centerX" constant="65" id="hvk-O5-bF6"/>
+                            <constraint firstAttribute="centerX" secondItem="Xvb-DS-884" secondAttribute="centerX" constant="-8" id="jUB-SJ-S8A"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="theSlider" destination="Xvb-DS-884" id="Ehd-rI-ruY"/>
+                        <outlet property="theTextField" destination="8tJ-qZ-SWz" id="NMC-Ok-rJM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
